overflow fix

--- a/app/assets/stylesheets/sage/system/patterns/objects/_panel.scss
+++ b/app/assets/stylesheets/sage/system/patterns/objects/_panel.scss
@@ -21,6 +21,7 @@
 }
 
 .sage-panel__body {
+  position: relative;
   overflow: auto;
 }
 
